--- a/BrowserStorage/Pages/CacheStorage.razor
+++ b/BrowserStorage/Pages/CacheStorage.razor
@@ -4,11 +4,11 @@
 @inject HttpClient HttpClient
 
 
-<button class="btn btn-primary" type="button" @onclick="SetValueAsync">Set Value</button>
+<button type="button" @onclick="SetValueAsync">Set Value</button>
 <div>Stored Value: @StoredValue</div>
-<button class="btn btn-primary" type="button" @onclick="GetValueAsync">Get Value</button>
-<button class="btn btn-primary" type="button" @onclick="RemoveAsync">Remove Value</button>
-<button class="btn btn-primary" type="button" @onclick="ClearAllAsync">Clear All</button>
+<button type="button" @onclick="GetValueAsync">Get Value</button>
+<button type="button" @onclick="RemoveAsync">Remove Value</button>
+<button type="button" @onclick="ClearAllAsync">Clear All</button>
 
 @code {
     public string StoredValue { get; set; } = "";
